Additional changes to make things work better and added more checks to the application. Cleaned up some more code and added further comments